name:                fest-ink-cli
version:             0.2.0.0
synopsis:            Command-line interface to fest.ink
description:         Please see README.md
homepage:            http://github.com/fumieval/fest-ink-cli
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (C) 2015 Fumiaki Kinoshita
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable fest-ink
  main-is:             main.hs
  ghc-options:         -threaded -Wall
  build-depends:       base, bytestring, conduit, exceptions, resourcet, attoparsec, http-conduit, aeson, lens, lens-aeson, conduit-extra, time, text, http-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/fest-ink-cli